--- a/fvtest/compilerunittest/CMakeLists.txt
+++ b/fvtest/compilerunittest/CMakeLists.txt
@@ -41,6 +41,11 @@ if(OMR_ARCH_POWER)
 	)
 endif()
 
+if(OMR_ARCH_X86)
+	list(APPEND COMPCGTEST_FILES
+		x/BinaryEncoder.cpp
+	)
+endif()
 
 list(APPEND COMPCGTEST_FILES
 	abstractinterpreter/AbsInterpreterTest.cpp
